<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="account_type">username_key</string>
    <string name="user_type_user">User</string>
    <string name="user_type_service">Service</string>
    <string name="add_to_cart">Add</string>
    <string name="add_1">+</string>
    <string name="subtract_1">-</string>
    <string name="loading">Please wait Loading…</string>
    <string name="new_product">New</string>
    <string name="action_settings">Settings</string>
    <string name="login_user_name" translatable="false">Enter username</string>
    <string name="login_password" translatable="false">Enter password</string>
    <string name="login_idle" translatable="false">Login</string>
    <string name="api_key" translatable="false">AIzaSyAAkWR5Ektn63hRlkKajhkOSAF7frmP26U</string>
    <string name="navigation_menu_home" translatable="false">Home</string>
    <string name="home_fragment_card_title" translatable="false">Covid-19 Summary</string>
    <string name="home_fragment_covid__global_confirmed" translatable="false">Total confirmed cases: </string>
    <string name="home_fragment_covid_india_confirmed" translatable="false">Confirmed cases in India: </string>
    <string name="home_fragment_covid__global_active" translatable="false">New confirmed cases globally: </string>
    <string name="home_fragment_covid_india_active" translatable="false">New confirmed cases in India: </string>
    <string name="home_fragment_status_text" translatable="false">Your Status: </string>
    <string name="navigation_menu_services" translatable="false">Services</string>
    <string name="navigation_menu_chat" translatable="false">Chat</string>
    <string name="navigation_menu_orders">Your Reuqests</string>
    <string name="services_navigation_menu_home" translatable="false">Add Service</string>
    <string name="services_navigation_menu_registered_service" translatable="false">Services</string>
    <string name="navigation_menu_orders_services">Requests</string>
    <string name="userRegistration" translatable="false">Register as user</string>
    <string name="serviceRegistration" translatable="false">Register as service</string>
    <string name="tab_text_1" translatable="false">Services</string>
    <string name="tab_text_2" translatable="false">Home</string>
    <string name="api_key_google">AIzaSyD2cZC35V8rthCAfrcElHuVlSfHtz189zM</string>
    <string-array name="testStatus">
        <item>No Result</item>
        <item>Negative</item>
        <item>Positive</item>
        <item>Requested</item>
    </string-array>
    <string-array name="schedule">
        <item>Weekly</item>
        <item>Weekends</item>
        <item>Weekdays</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="service_types">
        <item>Hospital</item>
        <item>Disinfect</item>
        <item>Doctor</item>
        <item>Ambulance</item>
        <item>Pathology</item>
        <item>Medicine</item>
        <item>Other</item>
    </string-array>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="AppName">CoTrack</string>
    <string name="app_name" translate="false">CoTrack</string>
    <string name="provider_authority" translate="false">com.cotrack.provider</string>
    <string name="feed_update_receiver_name">Update Subscriptions</string>
    <string name="feeds_label">Podcasts</string>
    <string name="statistics_label">Statistics</string>
    <string name="add_feed_label">Add Podcast</string>
    <string name="episodes_label">Episodes</string>
    <string name="all_episodes_short_label">All</string>
    <string name="new_episodes_label">New</string>
    <string name="favorite_episodes_label">Favorites</string>
    <string name="new_label">New</string>
    <string name="settings_label">Settings</string>
    <string name="downloads_label">Downloads</string>
    <string name="downloads_running_label">Running</string>
    <string name="downloads_completed_label">Completed</string>
    <string name="downloads_log_label">Log</string>
    <string name="subscriptions_label">Subscriptions</string>
    <string name="subscriptions_list_label">Subscriptions List</string>
    <string name="cancel_download_label">Cancel\nDownload</string>
    <string name="playback_history_label">Playback History</string>
    <string name="gpodnet_main_label">gpodder.net</string>
    <string name="gpodnet_auth_label">gpodder.net Login</string>
    <string name="episode_cache_full_title">Episode cache full</string>
    <string name="episode_cache_full_message">The episode cache limit has been reached. You can increase the cache size in the Settings.</string>
    <string name="playback_statistics_label">Playback</string>
    <string name="download_statistics_label">Downloads</string>
    <string name="total_time_listened_to_podcasts">Total time of podcasts played:</string>
    <string name="statistics_details_dialog">%1$d out of %2$d episodes started.\n\nPlayed %3$s out of %4$s.</string>
    <string name="statistics_mode">Statistics mode</string>
    <string name="statistics_mode_normal">Calculate duration that was actually played. Playing twice is counted twice, while marking as played is not counted</string>
    <string name="statistics_mode_count_all">Sum up all podcasts marked as played</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>
    <string name="statistics_reset_data">Reset statistics data</string>
    <string name="statistics_reset_data_msg">This will erase the history of duration played for all episodes. Are you sure you want to proceed?</string>
    <string name="total_size_downloaded_podcasts">Total size of downloaded podcasts:</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="drawer_preferences">Drawer Preferences</string>
    <string name="drawer_feed_order_unplayed_episodes">Sort by counter</string>
    <string name="drawer_feed_order_alphabetical">Sort alphabetically</string>
    <string name="drawer_feed_order_last_update">Sort by publication date</string>
    <string name="drawer_feed_order_most_played">Sort by number of played episodes</string>
    <string name="drawer_feed_counter_new_unplayed">Number of new and unplayed episodes</string>
    <string name="drawer_feed_counter_new">Number of new episodes</string>
    <string name="drawer_feed_counter_unplayed">Number of unplayed episodes</string>
    <string name="drawer_feed_counter_downloaded">Number of downloaded episodes</string>
    <string name="drawer_feed_counter_none">None</string>
    <string name="open_in_browser_label">Open in Browser</string>
    <string name="copy_url_label">Copy URL</string>
    <string name="share_url_label">Share URL</string>
    <string name="copied_url_msg">Copied URL to Clipboard</string>
    <string name="go_to_position_label">Go to this Position</string>
    <string name="clear_history_label">Clear History</string>
    <string name="confirm_label">Confirm</string>
    <string name="cancel_label">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="author_label">Author(s)</string>
    <string name="language_label">Language</string>
    <string name="url_label">URL</string>
    <string name="cover_label">Picture</string>
    <string name="error_label">Error</string>
    <string name="error_msg_prefix">An error occurred:</string>
    <string name="needs_storage_permission">Storage permission is needed for this operation</string>
    <string name="refresh_label">Refresh</string>
    <string name="external_storage_error_msg">No external storage is available. Please make sure that external storage is mounted so that the app can work properly.</string>
    <string name="chapters_label">Chapters</string>
    <string name="chapter_duration">Duration: %1$s</string>
    <string name="description_label">Description</string>
    <string name="episodes_suffix">\u0020episodes</string>
    <string name="processing_label">Processing</string>
    <string name="save_username_password_label">Save username and password</string>
    <string name="close_label">Close</string>
    <string name="retry_label">Retry</string>
    <string name="auto_download_label">Include in auto downloads</string>
    <string name="auto_download_apply_to_items_title">Apply to Previous Episodes</string>
    <string name="auto_download_apply_to_items_message">The new <i>Auto Download</i> setting will automatically be applied to new episodes.\nDo you also want to apply it to previously published episodes?</string>
    <string name="auto_delete_label">Auto Delete Episode</string>
    <string name="feed_volume_reduction">Volume Reduction</string>
    <string name="feed_volume_reduction_summary">Turn down volume for episodes of this feed: %1$s</string>
    <string name="feed_volume_reduction_off">Off</string>
    <string name="feed_volume_reduction_light">Light</string>
    <string name="feed_volume_reduction_heavy">Heavy</string>
    <string name="parallel_downloads_suffix">\u0020parallel downloads</string>
    <string name="feed_auto_download_global">Global default</string>
    <string name="feed_auto_download_always">Always</string>
    <string name="feed_auto_download_never">Never</string>
    <string name="send_label">Send&#8230;</string>
    <string name="episode_cleanup_never">Never</string>
    <string name="episode_cleanup_queue_removal">When not in queue</string>
    <string name="episode_cleanup_after_listening">After finishing</string>
    <plurals name="episode_cleanup_hours_after_listening">
        <item quantity="one">1 hour after finishing</item>
        <item quantity="other">%d hours after finishing</item>
    </plurals>
    <plurals name="episode_cleanup_days_after_listening">
        <item quantity="one">1 day after finishing</item>
        <item quantity="other">%d days after finishing</item>
    </plurals>
    <plurals name="num_selected_label">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="loading_more">Loading more…</string>
    <string name="mark_all_read_label">Mark all as played</string>
    <string name="mark_all_read_msg">Marked all Episodes as played</string>
    <string name="mark_all_read_confirmation_msg">Please confirm that you want to mark all episodes as being played.</string>
</resources>