<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@id/feedView"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/Theme.Base.CoTrack.Light"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/card_elevation"
                android:src="@drawable/ambulance_icon" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_weight="3"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/Theme.Base.CoTrack.Light"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/logoView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/feedView"
                    android:layout_weight="2">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/logo" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feedView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/navigation_menu_home" />
                </LinearLayout>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_gap">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/button_style"
            android:padding="@dimen/default_gap"
            android:text="@string/add_to_cart"
            android:textColor="@color/iron" />

        <LinearLayout
            android:id="@+id/layio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/subtract_1"
                    android:textColor="@color/iron"
                    android:background="@drawable/button_style"
                    android:fontFamily="@font/trebuc"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="25dp"/>


            <TextView
                android:id="@+id/prnumber"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="0"
                android:textColor="@color/iron"
                android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_1"
                    android:textColor="@color/iron"
                    android:background="@drawable/button_style"
                    android:fontFamily="@font/trebuc"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="25dp"/>

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>